Revision history for Perl extension POE::Component::SSLify.

{{$NEXT}}
 add informational test that prints out ssleay version

1.009 2014-11-12T00:41:25Z UTC
 - Updates to the auto-generated files
 - Tweaked the testsuite to use done_testing() for sanity, RT#66741 (thanks
   RCAPUTO!)
 - Use Test::FailWarnings in the testsuite in place of Test::NoWarnings
   (DAGOLDEN++)
 - Add t/simple_large.t to try and track down RT#58243 (thanks Johan!)
 - Added a boatload of tests to try and track down RT#95071 (thanks Joe!)

 [STATISTICS]
 - code churn: 27 files changed, 2160 insertions(+), 1503 deletions(-)

1.008 2011-05-04T21:55:27Z UTC
 - Bazerka@irc noticed that POE wasn't even listed as a runtime prereq,
   d0h!

1.007 2011-05-04T21:36:32Z UTC
 - Revert the ENGINE load logic added in 1.004 because it was causing
   coredumps on netbsd ( thanks BINGOS! )
 - Add the constant LOAD_SSL_ENGINES sub if you need to load the ssl
   engines
 - Tweak the renegotiate tests to be more tolerant of failures, thanks
   RCAPUTO - RT#66741

1.006 2011-04-22T00:21:51Z UTC
 - Fix a heinous bug where openssl will randomly+reliably close a
   connection ( thanks MIRE )
 - Tweak the hook tests so they test the case where no data is sent over
   the connection
 - Tweak the connfail tests so they work better

1.005 2011-03-10T07:55:30Z UTC
 - Fix the connfail tests due to an incorrect assumption regards socket
   close value, thanks CPANTesters!

1.004 2011-03-08T23:39:03Z UTC
 - We now load certificate files via CTX_use_certificate_chain_file(),
   thanks Zephaniah E. Loss-Cutler-Hull <warp-spam_perl@aehallh.com>
   OpenSSL docs suggest it -
   http://www.openssl.org/docs/ssl/SSL_CTX_use_certificate.html#NOTES
   PLEASE yell at me if you need the old functionality - the docs suggest
   this is the "better" way to do it...
 - Add the ability to pass a subref to call on connection/negotiation
   success, thanks Zephaniah E. Loss-Cutler-Hull